--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">CALCULATEBUDGET</string>
+    <string name="CostsMonth">Витрати за місяць</string>
+    <string name="CostsWeek">Витрати за тиждень</string>
+    <string name="AddCosts">Додати витрати</string>
+    <string name="AddBudget">Додати бюджет</string>
+    <string name="HelloWords">Тут буде ваш бюджет, гарного дня!</string>
+    <string name="YouCanAddExpense">Тут ви можете додавати ваші витрати</string>
+    <string name="EditExpense">Введіть витрати</string>
+    <string name="SubmitExpense">Додати</string>
+    <string name="textview">TextView</string>
+    <string name="textview1">TextView</string>
+    <string name="textview2">TextView</string>
+    <string name="textview3">TextView</string>
+    <string name="textview4">TextView</string>
+    <string name="textview5">TextView</string>
+    <string name="ShowBudget">Тут буде показано ваш бюджет</string>
+    <string name="AddYourBudget">Введіть ваш бюджет</string>
+    <string name="BudgetSubmit">Згода</string>
+    <string name="ExchengeButton">Міняю</string>
 </resources>
